--- a/app/src/main/res/drawable/ic_navigate_next.xml
+++ b/app/src/main/res/drawable/ic_navigate_next.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="40dp"
+    android:height="40dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="@color/purple_200">
+    android:tint="@color/lagoon_500">
   <path
       android:fillColor="@android:color/white"
       android:pathData="M10,6L8.59,7.41 13.17,12l-4.58,4.59L10,18l6,-6z"/>
