--- a/app/src/main/res/drawable/page_number_background.xml
+++ b/app/src/main/res/drawable/page_number_background.xml
@@ -3,7 +3,7 @@
     <size
         android:width="20dp"
         android:height="20dp"/>
-    <solid android:color="@color/purple_500"/>
+    <solid android:color="@color/lagoon_700"/>
     <corners android:topLeftRadius="10dp"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
