--- a/app/src/main/res/drawable/rotate_button_background.xml
+++ b/app/src/main/res/drawable/rotate_button_background.xml
@@ -4,7 +4,7 @@
     <size
         android:width="20dp"
         android:height="20dp"/>
-    <solid android:color="@color/purple_500"/>
+    <solid android:color="@color/lagoon_700"/>
     <corners android:bottomRightRadius="10dp" />
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
