--- a/app/src/main/res/drawable/thumb.xml
+++ b/app/src/main/res/drawable/thumb.xml
@@ -3,8 +3,11 @@
     android:shape="oval">
 
     <gradient
-        android:endColor="@color/purple_700"
-        android:startColor="@color/purple_700" />
+        android:angle="180"
+
+        android:endColor="@color/lagoon_700"
+        android:centerColor="@color/lagoon_500"
+        android:startColor="@color/white" />
 
     <size
         android:height="23dp"
