--- a/app/src/main/res/layout/activity_paging.xml
+++ b/app/src/main/res/layout/activity_paging.xml
@@ -17,7 +17,7 @@
         android:id="@+id/paging_actions"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/purple_200"
+        android:background="@color/lagoon_500"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.08"
