--- a/app/src/main/res/layout/page_item.xml
+++ b/app/src/main/res/layout/page_item.xml
@@ -8,7 +8,7 @@
     android:padding="20dp"
     app:cardCornerRadius="8dp"
     app:cardUseCompatPadding="true"
-    app:strokeColor="@color/purple_200"
+    app:strokeColor="@color/lagoon_200"
     app:strokeWidth="1dip">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -28,7 +28,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_percent="0.5"
-            app:riv_border_color="@color/purple_200"
+            app:riv_border_color="@color/lagoon_200"
             app:riv_border_width="1px"
             app:riv_corner_radius="4dp"
 
