--- a/app/src/main/res/layout/scan_card_item.xml
+++ b/app/src/main/res/layout/scan_card_item.xml
@@ -8,7 +8,7 @@
     android:padding="20dp"
     app:cardCornerRadius="8dp"
     app:cardUseCompatPadding="true"
-    app:strokeColor="@color/purple_200"
+    app:strokeColor="@color/lagoon_200"
     app:strokeWidth="1dip">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -31,7 +31,7 @@
                 android:id="@+id/scan_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/purple_700"
+                android:textColor="@color/lagoon_700"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@+id/scan_date"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
                 android:id="@+id/scan_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/purple_200"
+                android:textColor="@color/lagoon_500"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +69,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0.4"
             app:layout_constraintHorizontal_bias="0.90"
-            app:riv_border_color="@color/purple_200"
+            app:riv_border_color="@color/lagoon_200"
             app:riv_border_width="1px"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/scan_details"
